# QCIP

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_WIN.md  COMPILE.md  Dockerfile  README.md  README_WINDOWS.md  _CoqProject  categories.json  dune-project  float.c  qide.vsix  run-example-linux.sh  run-example-windows.cmd  run-example-windows.sh
SeparationLogic/SeparationLogic/: ArrayLib.v  ArrayLibCore.v  CNotation.v  CommonAssertion.v  CriticalSTS.v  FloatLib.v  MapLib.v  Mem.v  NestedCriticalSTS.v  SeparationLogic.v  StoreAux.v  StringLib.v  dune  highlevelmonad.v  pocv02.v
SeparationLogic/examples/: dune
SeparationLogic/examples/Applications_human/: los_sortlink_strategy_goal.v  los_sortlink_strategy_goal_check.v  los_sortlink_strategy_proof.v  malloc.v  super_poly_sll2.v
SeparationLogic/examples/Applications_human/LiteOS/: GetSortLinkNextExpireTime_goal.v  GetSortLinkNextExpireTime_goal_check.v  GetSortLinkNextExpireTime_proof_auto.v  GetSortLinkNextExpireTime_proof_manual.v  Get_Set_Value_goal.v  Get_Set_Value_goal_check.v  Get_Set_Value_proof_auto.v  Get_Set_Value_proof_manual.v  LOS_ListDelInit_goal.v  LOS_ListDelInit_goal_check.v  LOS_ListDelInit_proof_auto.v  LOS_ListDelInit_proof_manual.v  LOS_ListDelete_goal.v  LOS_ListDelete_goal_check.v  LOS_ListDelete_proof_auto.v  LOS_ListDelete_proof_manual.v  LOS_ListEmpty_goal.v  LOS_ListEmpty_goal_check.v  LOS_ListEmpty_proof_auto.v  (+49 more)
SeparationLogic/examples/QCP_demos_LLM/: array2_strategy_goal.v  array2_strategy_proof.v  array_auto_goal.v  array_auto_goal_check.v  array_auto_proof_auto.v  array_auto_proof_manual.v  array_cases_goal.v  array_cases_goal_check.v  array_cases_proof_auto.v  array_cases_proof_manual.v  array_shape_strategy_goal.v  array_shape_strategy_goal_check.v  array_shape_strategy_proof.v  avl_insert_goal.v  avl_insert_goal_check.v  avl_insert_proof_auto.v  avl_insert_proof_manual.v  avl_strategy_goal.v  avl_strategy_goal_check.v  avl_strategy_proof.v  bst_delete_rec2_goal.v  bst_delete_rec2_goal_check.v  bst_delete_rec2_proof_auto.v  bst_delete_rec2_proof_manual.v  bst_delete_rec_goal.v  bst_delete_rec_goal_check.v  bst_delete_rec_proof_auto.v  bst_delete_rec_proof_manual.v  bst_fp_delete_goal.v  bst_fp_delete_goal_check.v  bst_fp_delete_proof_auto.v  bst_fp_delete_proof_manual.v  bst_fp_insert_goal.v  bst_fp_insert_goal_check.v  bst_fp_insert_proof_auto.v  bst_fp_insert_proof_manual.v  bst_fp_lib.v  bst_fp_strategy_goal.v  bst_fp_strategy_goal_check.v  bst_fp_strategy_proof.v  (+169 more)
SeparationLogic/examples/QCP_demos_human/: array_auto_goal.v  array_auto_goal_check.v  array_auto_proof_auto.v  array_auto_proof_manual.v  array_shape_strategy_goal.v  array_shape_strategy_goal_check.v  array_shape_strategy_proof.v  avl_insert_goal.v  avl_insert_goal_check.v  avl_insert_proof_auto.v  avl_insert_proof_manual.v  avl_shape.v  avl_strategy_goal.v  avl_strategy_goal_check.v  avl_strategy_proof.v  bst_delete_rec2_goal.v  bst_delete_rec2_goal_check.v  bst_delete_rec2_proof_auto.v  bst_delete_rec2_proof_manual.v  bst_delete_rec_goal.v  bst_delete_rec_goal_check.v  bst_delete_rec_proof_auto.v  bst_delete_rec_proof_manual.v  bst_fp_delete_goal.v  bst_fp_delete_goal_check.v  bst_fp_delete_proof_auto.v  bst_fp_delete_proof_manual.v  bst_fp_insert_goal.v  bst_fp_insert_goal_check.v  bst_fp_insert_proof_auto.v  bst_fp_insert_proof_manual.v  bst_fp_lib.v  bst_fp_strategy_goal.v  bst_fp_strategy_goal_check.v  bst_fp_strategy_proof.v  bst_insert_goal.v  bst_insert_goal_check.v  bst_insert_proof_auto.v  bst_insert_proof_manual.v  bst_insert_rec_goal.v  (+137 more)
SeparationLogic/examples/QCP_demos_tutorial/: branch_destruct_goal.v  branch_destruct_goal_check.v  branch_destruct_proof_auto.v  branch_destruct_proof_manual.v  branch_join_private_condition_goal.v  branch_join_private_condition_goal_check.v  branch_join_private_condition_lib.v  branch_join_private_condition_proof_auto.v  branch_join_private_condition_proof_manual.v  float_goal.v  float_goal_check.v  float_proof_auto.v  float_proof_manual.v  given_mark_goal.v  given_mark_goal_check.v  given_mark_proof_auto.v  given_mark_proof_manual.v  multiinv_examples_goal.v  multiinv_examples_goal_check.v  multiinv_examples_proof_auto.v  multiinv_examples_proof_manual.v  swap_simple1_goal.v  swap_simple1_goal_check.v  swap_simple1_lib.v  swap_simple1_proof_auto.v  swap_simple1_proof_manual.v  swap_simple2_goal.v  swap_simple2_goal_check.v  swap_simple2_proof_auto.v  swap_simple2_proof_manual.v  swap_simple2_strategy_goal.v  swap_simple2_strategy_goal_check.v  swap_simple2_strategy_proof.v  swap_simple3_goal.v  swap_simple3_goal_check.v  swap_simple3_proof_auto.v  swap_simple3_proof_manual.v  swap_simple3_strategy_goal.v  swap_simple3_strategy_goal_check.v  swap_simple3_strategy_proof.v
SeparationLogic/unifysl/: Makefile  dune
SeparationLogic/unifysl/LogicGenerator/: dune
(+1955 files in other folders)
