; Converted from:
; - _CoqProject: -R SeparationLogic/unifysl Logic
; - SeparationLogic/_CoqProject: -R unifysl Logic
; - SeparationLogic/unifysl/_CoqProject: -R . Logic
(coq.theory
 (name Logic)
 (modules
  GeneralLogic.Base
  GeneralLogic.KripkeModel
  GeneralLogic.ProofTheory.BasicDeduction
  GeneralLogic.ProofTheory.BasicLogicEquiv
  GeneralLogic.ProofTheory.BasicSequentCalculus
  GeneralLogic.ProofTheory.ProofTheoryPatternsD1
  GeneralLogic.ProofTheory.TheoryOfSequentCalculus
  GeneralLogic.Semantics.Kripke
  GeneralLogic.ShallowEmbedded.ModelLanguage
  GeneralLogic.ShallowEmbedded.PredicateAsLang
  LogicGenerator.ConfigLang
  LogicGenerator.Utils
  LogicGenerator.demo932.Config
  LogicGenerator.demo932.Interface
  MetaLogicInj.ProofTheory.ProofRules
  MetaLogicInj.ShallowEmbedded.ModelLanguageMetaLogic
  MetaLogicInj.Syntax
  MinimumLogic.ProofTheory.ExtensionTactic
  MinimumLogic.ProofTheory.Minimum
  MinimumLogic.ProofTheory.ProofTheoryPatterns
  MinimumLogic.ProofTheory.ProofTheoryPatternsP
  MinimumLogic.ProofTheory.RewriteClass
  MinimumLogic.ProofTheory.TheoryOfJudgement
  MinimumLogic.ProofTheory.TheoryOfSequentCalculus
  MinimumLogic.Semantics.Kripke
  MinimumLogic.Semantics.SemanticEquiv
  MinimumLogic.Semantics.Trivial
  MinimumLogic.ShallowEmbedded.ModelLanguageMinimumLogic
  MinimumLogic.Sound.Sound_Classical_Trivial
  MinimumLogic.Syntax
  PropositionalLogic.ProofTheory.Classical
  PropositionalLogic.ProofTheory.DeMorgan
  PropositionalLogic.ProofTheory.GodelDummett
  PropositionalLogic.ProofTheory.Intuitionistic
  PropositionalLogic.ProofTheory.ProofTheoryPatterns
  PropositionalLogic.ProofTheory.RewriteClass
  PropositionalLogic.ProofTheory.TheoryOfClassicalAxioms
  PropositionalLogic.ProofTheory.TheoryOfIteratedConnectives
  PropositionalLogic.ProofTheory.TheoryOfPropositionalConnectives
  PropositionalLogic.Semantics.Kripke
  PropositionalLogic.Semantics.Trivial
  PropositionalLogic.ShallowEmbedded.ModelLanguagePropositionalLogic
  PropositionalLogic.ShallowEmbedded.PredicatePropositionalLogic
  PropositionalLogic.Sound.Sound_Classical_Trivial
  PropositionalLogic.Syntax
  SeparationLogic.Model.OSAGenerators
  SeparationLogic.Model.OrderedSA
  SeparationLogic.Model.SeparationAlgebra
  SeparationLogic.ProofTheory.Corable
  SeparationLogic.ProofTheory.Deduction
  SeparationLogic.ProofTheory.DerivedRules
  SeparationLogic.ProofTheory.IterSepcon
  SeparationLogic.ProofTheory.RewriteClass
  SeparationLogic.ProofTheory.SeparationLogic
  SeparationLogic.ProofTheory.TheoryOfCancel
  SeparationLogic.ProofTheory.TheoryOfSeparationAxioms
  SeparationLogic.Semantics.EmpSemantics
  SeparationLogic.Semantics.FlatSemantics
  SeparationLogic.Semantics.StrongSemantics
  SeparationLogic.Semantics.WeakSemantics
  SeparationLogic.ShallowEmbedded.ModelLanguageSeparationLogic
  SeparationLogic.ShallowEmbedded.PredicateSeparationLogic
  SeparationLogic.Sound.Sound_Flat
  SeparationLogic.Syntax
  ShallowQuantifierLogic.ModelConstrALL
  ShallowQuantifierLogic.ModelConstrEX
  ShallowQuantifierLogic.ProofTheory
  ShallowQuantifierLogic.Syntax
  lib.Bijection
  lib.Bisimulation
  lib.Coqlib
  lib.Countable
  lib.Ensembles_ext
  lib.Equivalence_ext
  lib.List_Func_ext
  lib.PTree
  lib.RelationPairs_ext
  lib.Relation_ext
  lib.register_typeclass))

(include_subdirs qualified)
